# youtube-music-remover

./: .gitignore  README.md  app.py  jobs.db  pyproject.toml  vocals.ipynb
.github/workflows/: ci.yml
android/: .gitignore  settings.gradle.kts  termux-setup.sh
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_widget_batch.xml  ic_widget_paste.xml  ic_widget_settings.xml  ic_widget_upload.xml  widget_background.xml  widget_bg_dark.xml  widget_bg_transparent.xml  widget_btn_bg.xml  widget_btn_bg_light.xml
android/app/src/main/res/layout/: widget_layout.xml
android/app/src/main/res/values/: colors.xml  (+2 more)
android/app/src/main/res/values-ar/: strings.xml
android/app/src/main/res/values-de/: strings.xml
android/app/src/main/res/values-es/: strings.xml
android/app/src/main/res/values-fr/: strings.xml
android/app/src/main/res/values-hi/: strings.xml
android/app/src/main/res/values-id/: strings.xml
android/app/src/main/res/values-it/: strings.xml
android/app/src/main/res/values-ja/: strings.xml
android/app/src/main/res/values-ko/: strings.xml
android/app/src/main/res/values-ms/: strings.xml
android/app/src/main/res/values-pt/: strings.xml
android/app/src/main/res/values-ru/: strings.xml
api/: Dockerfile  main.py  requirements.txt  test_api.py  utils.py
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 3.txt  4.txt
fdroid/: com.musicremover.app.yml
(+28 files in other folders)
